// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"Program":"cmd","Window":"ahk_exe cmd.exe","option":"ActivateOrOpen"}}, then matches snapshot 1`] = `
"^!a::ActivateOrOpen(\\"ahk_exe cmd.exe\\", \\"cmd\\")

"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"LockWorkStation"}}, then matches snapshot 1`] = `
"^!a::LockWorkStation()

"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"OpenConfig"}}, then matches snapshot 1`] = `
"^!a::
OpenConfig()
return

"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"Send","input":"b"}}, then matches snapshot 1`] = `
"^!a::send, b

"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"SendUnicodeChar","input":"0x2192"}}, then matches snapshot 1`] = `
"^!a::SendUnicodeChar(0x2192)

"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"TurnMonitorsOff"}}, then matches snapshot 1`] = `
"^!a::TurnMonitorsOff()

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","Program":"cmd","Window":"ahk_exe cmd.exe","option":"ActivateOrOpen"}}, then matches snapshot 1`] = `
":*c:;implies::
ActivateOrOpen(\\"ahk_exe cmd.exe\\", \\"cmd\\")
return

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"LockWorkStation"}}, then matches snapshot 1`] = `
":*c:;implies::
    return

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"OpenConfig"}}, then matches snapshot 1`] = `
":*c:;implies::
OpenConfig()
return

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"Send","input":"b"}}, then matches snapshot 1`] = `
":*c:;implies::
send, b
return

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"SendUnicodeChar","input":"0x2192"}}, then matches snapshot 1`] = `
":*c:;implies::
SendUnicodeChar(0x2192)
return

"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"TurnMonitorsOff"}}, then matches snapshot 1`] = `
":*c:;implies::
    return

"
`;
